crates/servicepoint_binding_uniffi/libraries/go/servicepoint_binding_uniffi/servicepoint_binding_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	int32_t capacity;
	int32_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
void uniffi_servicepoint_binding_uniffi_fn_free_bitvec(
	void* ptr,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_clone(
	void* other,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_load(
	RustBuffer data,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_new(
	uint64_t size,
	RustCallStatus* out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_bitvec_copy_raw(
	void* ptr,
	RustCallStatus* out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_bitvec_equals(
	void* ptr,
	void* other,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_bitvec_fill(
	void* ptr,
	int8_t value,
	RustCallStatus* out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_bitvec_get(
	void* ptr,
	uint64_t index,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_bitvec_len(
	void* ptr,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_bitvec_set(
	void* ptr,
	uint64_t index,
	int8_t value,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_bitmap(
	void* ptr,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_clone(
	void* other,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_load(
	uint64_t width,
	uint64_t height,
	RustBuffer data,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new(
	uint64_t width,
	uint64_t height,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new_max_sized(
	RustCallStatus* out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_bitmap_copy_raw(
	void* ptr,
	RustCallStatus* out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_bitmap_equals(
	void* ptr,
	void* other,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_bitmap_fill(
	void* ptr,
	int8_t value,
	RustCallStatus* out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_bitmap_get(
	void* ptr,
	uint64_t x,
	uint64_t y,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_bitmap_height(
	void* ptr,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_bitmap_set(
	void* ptr,
	uint64_t x,
	uint64_t y,
	int8_t value,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_bitmap_width(
	void* ptr,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_brightnessgrid(
	void* ptr,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_clone(
	void* other,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_load(
	uint64_t width,
	uint64_t height,
	RustBuffer data,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_new(
	uint64_t width,
	uint64_t height,
	RustCallStatus* out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_copy_raw(
	void* ptr,
	RustCallStatus* out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_equals(
	void* ptr,
	void* other,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_fill(
	void* ptr,
	uint8_t value,
	RustCallStatus* out_status
);
uint8_t uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_get(
	void* ptr,
	uint64_t x,
	uint64_t y,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_height(
	void* ptr,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_set(
	void* ptr,
	uint64_t x,
	uint64_t y,
	uint8_t value,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_width(
	void* ptr,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_chargrid(
	void* ptr,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_clone(
	void* other,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_load(
	RustBuffer data,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_new(
	uint64_t width,
	uint64_t height,
	RustCallStatus* out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_chargrid_as_string(
	void* ptr,
	RustCallStatus* out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_chargrid_equals(
	void* ptr,
	void* other,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_chargrid_fill(
	void* ptr,
	RustBuffer value,
	RustCallStatus* out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get(
	void* ptr,
	uint64_t x,
	uint64_t y,
	RustCallStatus* out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get_col(
	void* ptr,
	uint64_t x,
	RustCallStatus* out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get_row(
	void* ptr,
	uint64_t y,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_chargrid_height(
	void* ptr,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set(
	void* ptr,
	uint64_t x,
	uint64_t y,
	RustBuffer value,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set_col(
	void* ptr,
	uint64_t x,
	RustBuffer col,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set_row(
	void* ptr,
	uint64_t y,
	RustBuffer row,
	RustCallStatus* out_status
);